FestinaLenteApp/src/objects/TwilioConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Twilio is used to send SMS messages</description>
    <fields>
        <fullName>AccountSid__c</fullName>
        <label>AccountSid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromNumber__c</fullName>
        <label>FromNumber</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageCost__c</fullName>
        <label>Message Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MessagePrefix__c</fullName>
        <inlineHelpText>To include a User field, use e.g. {!User.Name}; to include a line feed use \n; to include a leading or trailing space use \s.</inlineHelpText>
        <label>Message Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageSuffix__c</fullName>
        <inlineHelpText>To include a User field, use e.g. {!User.Name}; to include a line feed use \n; to include a leading or trailing space use \s.</inlineHelpText>
        <label>Message Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Twilio Configuration</label>
</CustomObject>